CS-412 - Fixed dropdown boxes on mobile view

--- a/csatar-theme/assets/css/csatar-custom-styles.css
+++ b/csatar-theme/assets/css/csatar-custom-styles.css
@@ -229,7 +229,7 @@ p.card-text, .card-text {
 .errormsg, .invalid-feedback {
     font-family: geomanist !important;
     font-weight: 300;
-    font-size: calc(0.6rem + 0.5vww) !important;
+    font-size: calc(0.6rem + 0.5vw) !important;
 }
 
 a {
@@ -802,6 +802,12 @@ a.dropdown-item {
     border-top-right-radius: 0px !important;
     border-bottom-left-radius: 12px !important;
     border-bottom-right-radius: 12px !important;
+}
+
+.select2-container .select2-selection--single {
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
 }
 
 .dropdown-underline {
@@ -1703,6 +1709,17 @@ textarea {
 
 a.login:link, a.login:visited, a.login:active {
     color:#78863F !important;
+}
+
+@media (max-width: 576px) {
+
+    .form-group.span-left {
+        width: 100%;
+    }
+
+    .form-group.span-right {
+        width: 100%;
+    }
 }
 
 /* Other elements */
